# Password-Strength-Evaluation-System

./: .gitignore  .pre-commit-config.yaml  0896.py  DISCLAIMER.md  README.md  demo_simple.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: synthetic.yaml
configs/evaluation/: comprehensive.yaml
configs/model/: entropy_based.yaml
demo/: app.py
scripts/: train.py
src/data/: __init__.py
src/eval/: __init__.py
src/features/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py
src/viz/: __init__.py
tests/: test_password_strength.py
